[package]
name = "invoketest"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-env-common = { version = "0.0.5", features = ["std"] }
soroban-env-host = { version = "0.0.5", features = ["vm", "serde", "hostfn_log_fmt_values"] }
clap = { version = "3.1.18", features = ["derive", "env"] }
base64 = "0.13.0"
serde = "1.0.82"
serde_json = "1.0.82"
hex = "0.4.3"
sha2 = "0.10.2"
ed25519-dalek = "1.0.1"
rand = "0.7.3"

[patch.crates-io]
soroban-env-common = { git = "https://github.com/stellar/rs-soroban-env", rev = "4e2f308b" }
soroban-env-host = { git = "https://github.com/stellar/rs-soroban-env", rev = "4e2f308b" }
soroban-env-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "4e2f308b" }
soroban-native-sdk-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "4e2f308b" }
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "91405076" }
wasmi = { package = "soroban-wasmi", git = "https://github.com/stellar/wasmi", rev = "a61b6df" }
